@@ -287,6 +287,15 @@ public:
     {
         VERIFY_THREAD_AFFINITY(AutomatonThread);
 
+        // Destroy finished tablet actions associated with the bundle.
+        const auto& objectManager = Bootstrap_->GetObjectManager();
+        for (auto* action : cellBundle->TabletActions()) {
+            YCHECK(IsObjectAlive(action));
+            YCHECK(action->IsFinished());
+            action->SetTabletCellBundle(nullptr);
+            objectManager->UnrefObject(action);
+        }
+
         // Remove tablet cell bundle from maps.
         YCHECK(NameToTabletCellBundleMap_.erase(cellBundle->GetName()) == 1);
 
